--- a/Week_2/styles/shared.css
+++ b/Week_2/styles/shared.css
@@ -15,13 +15,12 @@ body {
       font-family: 'Fira Sans', sans-serif; /* ,를 이용해 폴백폰트(앞의 글꼴 로딩 실패시 이용되는 글꼴) 를 지정할 수 있다 */
       /* text-align: center; */
       color: rgb(8, 8, 7);
-      font-size: 30px;
     }
   
  a {
       padding: 12px;
-      color: rgb(0, 0, 0);
-      text-decoration: none
+      color: rgb(red);
+      text-decoration: underline;
     }
     
   a:hover {
