--- a/Week_2/styles/site.css
+++ b/Week_2/styles/site.css
@@ -16,14 +16,15 @@ img {
   height: 200px;
   border: 4px solid rgb(10, 9, 9);
   border-radius: 100px;
-  display: inline-block;
+  margin-top: -150px;
 
 }
 
-.main_body {
+main {
+  width: 800px;
   border: 3px solid rgb(10, 9, 9) ;
   background-color: aqua;
-  margin: -65px 0px 70px 0px;
+  margin: 100px auto 70px auto;
   padding: 50px;
   border-radius: 10px;
   box-shadow: 4px 4px 3px rgba(0,0,0,0.5);
@@ -34,4 +35,9 @@ p {
   font-size: 50px;
   font-weight: bold;
   color:rgb(85, 78, 78);
+}
+
+span {
+  color: rgb(red);
+  size: 10px;
 }
