--- a/Week_4/shared.css
+++ b/Week_4/shared.css
@@ -3,6 +3,13 @@ body {
     margin: 0;
 }
 
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 60px;
+}
+
 ul {
     list-style:none;
     margin:0;
@@ -18,4 +25,13 @@ ul {
     text-transform: uppercase;
     text-shadow: 2px 3px 3px rgb(black);
 
+}
+
+
+header ul {
+    display: flex;
+}
+
+header li {
+    margin-left: 20px;
 }
