--- a/Week_4_0/styles.css
+++ b/Week_4_0/styles.css
@@ -22,6 +22,10 @@
     width: 250px;
     margin: 10px;
     padding: 0;
+    display: flex;
+    text-align: center;
+    align-items: space-between;
+    flex-direction: row-reverse;
   }
   
   li {
