절대적 요소와 상대적 요소
position: absolute, fixed, relative

--- a/Week_4_1/styles.css
+++ b/Week_4_1/styles.css
@@ -1,4 +1,9 @@
-div {
+  html{
+  margin: 20px;
+  }  
+  
+  
+  div {
     background-color: #c7c7c7;
     padding: 20px;
     text-align: center;
@@ -12,6 +17,7 @@ div {
   
   #container {
     background-color: #521751;
+    position: relative;
   }
   
   #container p {
@@ -25,8 +31,10 @@ div {
   #two {
     background-color: #c95bc7;
     position: relative;
-    bottom:20px;
-    left: 40px;
+    /* top:-200px; 추천하는 방식은 아님 */
+    /* position: absolute; */
+    position: fixed;
+    top: 0px;
   }
   
   #three {
