저번과제에서 line-height 관련 부분 토의
line height가 콘텐츠영역 상의 높이를 조정함을 발견. 이는 border랑 margin이랑 별개로 작동하며 이를 잘못 사용할 시 텍스트 크기와 별개로 위 아래 여백이 생기는 문제가 발생할 수 있으므로 주의요함

--- a/Week_2_assignment/main.css
+++ b/Week_2_assignment/main.css
@@ -35,10 +35,15 @@ p{
 }
 
 li {
-    list-style: square;
+    box-sizing: 20px;
+    padding-left: 5px;
+    list-style: none;
     color: rgb(229, 222, 91);
-    margin: 16px 0px 
-    /* li와 p 끼리 마지 충돌 발생 */
+    margin: 16px 0px;
+    border-left: 5px solid ;
+    border-color: rgb(yellow);
+    font-size: 24px;
+    
 }
 
 ul{
