--- a/Week_4/style.css
+++ b/Week_4/style.css
@@ -50,3 +50,59 @@
 #hero-content a:hover{
     background-color: rgb(255,238,0);
 }
+
+#highlights {
+    padding: 24px; /*이걸 넣음으로 인해 자식의 마진이 부모에게로 적용되지 않게 할 수 있다*/
+    /* background-color: rgb(227, 255,253); */
+    background: linear-gradient(45deg, rgb(227,255,253),rgb(202,243,240));
+}
+
+#highlights h2 {
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 40px;
+    color: rgb(59,65,64);
+    margin: 24px;
+}
+
+.destination img {
+    height:200px;
+    width: 100% ;
+    box-shadow: 2px 4px 8px rgb(68,67,67);
+    border-radius: 10px;
+    object-fit: cover;
+}
+
+.destination {
+    margin: 0 20px;
+    text-transform: uppercase;
+}
+
+.destination p {
+    text-align: center;
+    font-size: 24px;
+    color: rgb(124,123,123);
+    margin: 20px;
+} 
+
+#destinations {
+    display: flex;
+    /* justify-content: space-between; */
+    width:90%; /*이거의 값이 이것의 모체인 #hightlights의 값에 연동이 됨*/
+    margin:auto;
+    margin-bottom: 40px;
+    justify-content: center;
+}
+
+/* .destination {
+    display:flex;
+} 
+이렇게 하게되면 li 상에서도 flex 적용되어서 글자랑 사진이랑 같이 플렉스 처림됨*/
+
+/* #highlights {
+    width: 1200px;
+} */
+
+.destination strong {
+    color:rgb(0,160,117);
+}
