--- a/Week_4/shared.css
+++ b/Week_4/shared.css
@@ -53,3 +53,26 @@ header a:hover {
     background-color:rgb(255,251,0);
     
 }
+
+footer {
+    background: linear-gradient(70deg, rgb(24,24,24), rgb(25,29,29));
+    padding: 36px 0;
+}
+
+footer li {
+    width: 80px;
+    height:80px;
+    margin: 50px 50px;
+}
+
+footer img {
+    width: 80px;
+    height:80px;
+    margin: 0 30px;
+}
+
+footer ul {
+    display: flex;
+    justify-content: center;
+    /* padding: 40px; */
+}
