--- a/Week_4/places.css
+++ b/Week_4/places.css
@@ -8,9 +8,9 @@ header {
     position: static;
 }
 
-.ul1 {
+main ul {
     width: 1200px;
-    margin: 0 auto;
+    margin: 0 auto 48px auto;
     /* display: flex;
     justify-content: space-between; */
 
@@ -25,38 +25,8 @@ header {
     
 }
 
-.ul0 {
-    width: 100%;
-    margin: 0 0;
-    display: flex;
-    justify-content: cneter;
-
-    /* display: flex; */
-    /* flex-direction: column; <- 이걸로는 작동안됨*/
-    /* flex-wrap: wrap; */
-     /* 뭐지? 왜 wrap 했는데 두개의 요소로 세로방향으로 나뉘지? */
-    /* width: 1500px; */
-    /* display: grid;
-    grid-template-columns: 1fr;
-    gap: 20px 20px; */
-    
-}
-
-.ul2 {
-    width: 1200px;
-    margin: 0 auto;
-    /* display: flex;
-    justify-content: space-between; */
-
-    /* display: flex; */
-    /* flex-direction: column; <- 이걸로는 작동안됨*/
-    /* flex-wrap: wrap; */
-     /* 뭐지? 왜 wrap 했는데 두개의 요소로 세로방향으로 나뉘지? */
-    /* width: 1500px; */
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px 20px;
-    
+li:nth-of-type(3) {
+    grid-column: 1 / span 2; /*span 왜 넣어야 되는거지? */
 }
 
 main li {
@@ -65,7 +35,6 @@ main li {
     box-shadow: 1px 1px 4px rgba(0,0,0,0.2);
     border-radius: 6px;
     overflow: hidden;
-    width: 700px;
     
 }
 
