--- a/Week_5_0/main.css
+++ b/Week_5_0/main.css
@@ -48,7 +48,7 @@ ul{
     gap: 30px 30px;
     list-style: none;
     /*이 밑에거 추가하니깐 모양은 나쁘지 않아 졌는데 뭔가 이상함*/
-    margin: 0 300px;
+    /* margin: 0 300px; */
     align-items: center;
     padding: 0;
     
