--- a/Week_5_1/styles.css
+++ b/Week_5_1/styles.css
@@ -99,3 +99,16 @@ body {
   .btn:hover {
     background-color: rgb(221, 134, 34);
   }
+
+  @media (max-width: 48rem) {
+    #latest-products ul {
+      grid-template-columns: 1fr;
+    }
+    main h1 {
+      font-size: 1.5rem;
+    }
+    #main-header nav a {
+      font-size: 0px;
+    }
+  }
+
