--- a/Week_5_1/styles.css
+++ b/Week_5_1/styles.css
@@ -22,8 +22,26 @@ body {
     font-weight: bold;
     color: rgb(238, 164, 80);
     text-transform: uppercase;
+    
   }
   
+.menu-btn {
+  width: 3rem;
+  height: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  display: none;
+}
+
+.menu-btn span {
+  /* display: block; 기본적으로 span은 인라인 요소이기 때문 */
+  width: 100%;
+  height: 3px;
+  background-color: white;
+
+}
+
   #main-header ul {
     list-style: none;
     display: flex;
@@ -43,7 +61,50 @@ body {
   #main-header nav a:hover {
     color: rgb(228, 163, 44);
   }
+
+  #side-drawer {
+    width:100%; 
+    height: 100%;
+    background-color: rgb(29,26,27);
+    display: none;
+
+  }
+
+  #side-drawer:target {
+    display:block;
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
+
+  #side-drawer header {
+    height: 5rem;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 0 5%;
+  }
+
+  #side-drawer ul{
+    list-style: none;
+    margin: 0;
+    padding: 4rem;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center;  */
+    /*flex-direction이 cloumn으로 설정되어 있으면 align-items가 요소,플렉스 항목들을 교차축, 가로축을 따라 중앙으로 정렬시켜줌*/
+    align-items: center;
+  }
+
+  #side-drawer li {
+    margin: 1rem 0;
+  }
   
+  #side-drawer a {
+    color: rgb(253,239,213);
+    font-size: 2rem;
+  }
+
   main h1 {
     text-align: center;
     color:rgb(238, 164, 80);
@@ -83,6 +144,10 @@ body {
     /* font-size: 200%; */
 
   }
+
+  .food-item h2 {
+    margin: 0 0 1rem 0;
+  }
   
   h2 {
     /* font-size: 200%; */
@@ -110,5 +175,9 @@ body {
     #main-header nav {
       display:none;
     } 
+    .menu-btn {
+      display:flex; /*첨에 이거 아무생각 없이 그냥 block으로 했어서 버튼 안 보이게 뜸 */
+    }
+  
   }
 
