--- a/Section9/styles.css
+++ b/Section9/styles.css
@@ -1,6 +1,15 @@
 html {
     --color-grey-100: rgb(236,236,246);
-    background-color: var(--color-grey-100);
+    --color-grey-600: rgb(58,58,58);
+    --color-grey-400: rgb(134, 134, 134);
+    --color-grey-900: rgb(41, 41, 41);
+
+    --color-primary-300: rgb(167,226,255);
+    --color-primary-700: rgb(0,170,255);
+
+    --size-1: 18px;
+    --size-5: 50px;
+
     font-family: 'Krub', sans-serif;
     font-weight: 400;
   }
@@ -10,10 +19,17 @@ html {
     width: 350px;
     margin: 50px auto;
     box-shadow: 3px 3px 10px rgb(201, 200, 200);
+    transition: transform 0.5s ease-out ;
+  }
+
+  .card-container:hover {
+    transform: scale(1.05);
+    /* transform: rotate(100deg); */
+
   }
   
   h1 {
-    color: rgb(58, 58, 58);
+    color: var(--color-grey-600);
     text-align: left;
     padding: 30px 50px 0px 50px;
     margin: 10px 0;
@@ -22,7 +38,7 @@ html {
   }
   
   .card-info {
-    color: rgb(134, 134, 134);
+    color: var(--color-grey-400);
     text-align: left;
     padding: 0 50px;
     margin: 10px 0 30px 0;
@@ -33,7 +49,7 @@ html {
     background-color: rgb(167, 226, 255);
     text-align: center;
     margin: 30px auto 10px auto;
-    font-size: 50px;
+    font-size: var(--size-5);
     font-weight: 600;
   }
   
@@ -72,7 +88,7 @@ html {
   }
   
   .button {
-    color: rgb(0, 170, 255);
+    color: var(--color-primary-700);
     text-decoration: none;
     text-transform: uppercase;
     display: inline-block;
