--- a/Section10/styles.css
+++ b/Section10/styles.css
@@ -3,10 +3,19 @@ body {
     margin: 8rem;
 }
 
+form {
+    width: 30rem;
+    margin:3rem auto;
+    background-color:  white;
+    padding: 1rem;
+    border-radius: 6px;
+}
+
 input {
-    width: 20rem;
+    width: 100%;
     display: block;
     margin-bottom: 1rem;
+    box-sizing:border-box;
 }
 
 button {
