--- a/Section10/styles.css
+++ b/Section10/styles.css
@@ -1,6 +1,7 @@
 body {
     background-color: rgb(32, 31, 31);
     margin: 8rem;
+    font-family: 'Roboto', sans-serif;
 }
 
 form {
@@ -11,13 +12,39 @@ form {
     border-radius: 6px;
 }
 
+label {
+    margin-bottom: 0.5rem; 
+    display: block; /*인라인 요소로 되어있으로 상하 마진 무시됨 so 블록요소로 변경하기 */
+}
+
 input {
     width: 100%;
     display: block;
     margin-bottom: 1rem;
     box-sizing:border-box;
+    border: 1px solid rgb(137, 100, 100);
+    padding: 0.25rem;
+    color: rgb(194, 64, 64);
+}
+
+input:focus {
+    background-color: purple;
+    color:rgb(194, 64, 64);
+    border-color: blue;
 }
 
 button {
     display: block;
+    /* font: normal 1rem 'Roboto','sans-serif'; */
+    font: inherit;
+    background-color: black;
+    color: white;
+    border: 1px solid rgb(32, 31, 31);
+    padding: 0.5rem 1.5rem;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: rgb(128, 94, 159);
 }
