여러가지 입력 필드 실습 + css 상에 꾸미기

--- a/Section10/styles.css
+++ b/Section10/styles.css
@@ -48,3 +48,13 @@ button {
 button:hover {
     background-color: rgb(128, 94, 159);
 }
+
+.form-control-inline {
+    display: flex;
+
+}
+
+.form-control-inline input {
+    width: auto;
+    margin-right: 0.5rem;
+}
