EJS 템플릿으로 동적 컨텐츠 랜더링

--- a/Section19/views/restaurants.ejs
+++ b/Section19/views/restaurants.ejs
@@ -51,6 +51,11 @@
     <main>
       <h1>Recommended restaurants</h1>
       <p>Find your next favorite restaurants with help of our other users!</p>
+      <!-- <p>ahahhahahah X</p> -->
+      <p>ahahahah <%= numberOfRestaurants %> </p> 
+      <!-- <% 여기는 서버에서 구문 분석되고 랜더링 되기 때문에 완성된 html코드만 브라우저로 전송됨  -->
+
+
       <ul id="restaurants-list">
         <li class="restaurant-item">
           <article>
