--- a/Section19/views/restaurants.ejs
+++ b/Section19/views/restaurants.ejs
@@ -57,22 +57,24 @@
 
 
       <ul id="restaurants-list">
-        <li class="restaurant-item">
-          <article>
-            <h2>Restaurant Title</h2>
-            <div class="restaurant-meta">
-              <p>Mexican</p>
-              <p>Address of the restaurant, including city</p>
-            </div>
-            <p>
-              A short description, explaining why this restaurant is awesome!
-            </p>
-            <div class="restaurant-actions">
-              <a href="">View Website</a>
-            </div>
-          </article>
-        </li>
-  
+        <!-- 아래는 일부 html논리를 반복할 수 있는 JS 코드를 작성하는 것과 같음  -->
+        <% for (const restaurant of restaurants) { %>
+          <li class="restaurant-item">
+            <article>
+              <h2><%= restaurant.name %></h2>
+              <div class="restaurant-meta">
+                <p><%= restaurant.cuisine %></p>
+                <p><%= restaurant.address %></p>
+              </div>
+              <p>
+                <%= restaurant.description %>
+              </p>
+              <div class="restaurant-actions">
+                <a href="<%= restaurant.website %>">View Website</a>
+              </div>
+            </article>
+          </li>
+        <% } %>
       </ul>
     </main>
   </body>
