--- a/Section20/views/restaurant-detail.ejs
+++ b/Section20/views/restaurant-detail.ejs
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <%- include('includes/head') %>
-    <link rel="stylesheet" href="/styles/restaurants.css" />
+    <link rel="stylesheet" href="/styles/restaurants.css" /> <!--절대경로로 전환-->
   </head>
   <body>
     <%- include('includes/header') %>
     <%- include('includes/side-drawer') %>
     <main>
-      <h1>TITLE OF THE RESTAURANT <%= rid %></h1>
+      <h1>TITLE OF THE RESTAURANT <%= rid %></h1> <!--rid = url에 입력된 동적 경로-->
       <p>Cuisine | Address</p>
       <p>Description of the restaurant</p>
       <p><a href="">View Website</a></p>
