--- a/Section20/views/includes/restaurants/restaurant-item.ejs
+++ b/Section20/views/includes/restaurants/restaurant-item.ejs
@@ -9,9 +9,8 @@
       <%= restaurant.description %>
     </p>
     <div class="restaurant-actions">
-      <a href="/restaurants/r1">View Restaurant</a> 
-      <!-- 레스토랑 웹사이트로 연결되는 것이 아니라 특정 레스토랑을 로드해야함  -->
-      <!-- restaurants 다음에 id는 우리가 가지고 있는 데이터가 아니므로 일단 r1으로 하드 코딩  -->
+      <a href="/restaurants/<%= restaurant.id %>">View Restaurant</a> 
+      <!-- ejs가 이 템플릿을 구문 분석할 때 구체적인 값을 얻고 랜더링된 html 내용을 넣은 후에 해당 링크에도 넣어주게됨  -->
     </div>
   </article>
 </li>
