--- a/Section20/views/restaurant-detail.ejs
+++ b/Section20/views/restaurant-detail.ejs
@@ -8,10 +8,10 @@
     <%- include('includes/header') %>
     <%- include('includes/side-drawer') %>
     <main>
-      <h1>TITLE OF THE RESTAURANT <%= rid %></h1> <!--rid = url에 입력된 동적 경로-->
-      <p>Cuisine | Address</p>
-      <p>Description of the restaurant</p>
-      <p><a href="">View Website</a></p>
+      <h1>TITLE OF THE RESTAURANT <%= restaurant.name %></h1> 
+      <p> <%=restaurant.cuisine %> | <%=restaurant.address%></p>
+      <p><%=restaurant.description %></p>
+      <p><a href="<%=restaurant.website %>">View Website</a></p>
     </main>
   </body>
 </html>
