코드 리팩토링 (??) .380번 강의
1. 함수가 다른파일에 저장되어 있을 때 그냥 함수 쓰듯이 쓰면 오류남
<노드 js 자바스크립트는 일반적으로 브라우저 측 자바스크립트처럼 작동함. 따라서 함수에 정의된 변수가 있는 경우에 기본적으로 코드의 다른 부분에서 사용 불가

<여기 강의 내용 전체적으로 이해못함>
https://www.udemy.com/course/100-2022-web-development/learn/lecture/30290592#overview

--- a/Section20/views/404.ejs
+++ b/Section20/views/404.ejs
@@ -7,9 +7,9 @@
     <%- include('includes/header') %>
     <%- include('includes/side-drawer') %>
     <main>
-      <h1>Page not found</h1>
+      <h1>Page not found!</h1>
       <p>
-        alalalalalalalallala
+        Unfortunately
       </p>
     </main>
   </body>
