--- a/Section20/views/500.ejs
+++ b/Section20/views/500.ejs
@@ -8,7 +8,7 @@
     <main>
       <h1>Something went wrong!</h1>
       <p>
-        Unfortunately, server error
+        Unfortunately
       </p>
     </main>
   </body>
