--- a/Section20/views/404.ejs
+++ b/Section20/views/404.ejs
@@ -9,7 +9,7 @@
     <main>
       <h1>Page not found!</h1>
       <p>
-        Unfortunately
+        Unfortunately, we weren't able to find this page.
       </p>
     </main>
   </body>
