--- a/Section20/views/500.ejs
+++ b/Section20/views/500.ejs
@@ -8,7 +8,8 @@
     <main>
       <h1>Something went wrong!</h1>
       <p>
-        Unfortunately
+        Unfortunately, something went wrong on the server - we're doing our best
+        to fix it as quickly as possible!
       </p>
     </main>
   </body>
